--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "lenis": "^1.3.3",
     "nuxt": "^3.17.3",
+    "nuxt-aos": "^1.2.5",
+    "nuxt-lucide-icons": "^1.0.5",
     "r": "^0.0.5",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3",
